idf_component_register(SRCS
                         "main.cpp"
                       INCLUDE_DIRS
                         "."
                       REQUIRES
                         constants
                         arduino-esp32
                         esp8266-oled-ssd1306
                         logger
                         sockets
                         dis
                         wifi
                         i2c
                       PRIV_REQUIRES
                         cxx
)
