idf_component_register(SRCS
                         "main.cpp"
                       INCLUDE_DIRS
                         "."
                       REQUIRES
                         constants
                         arduino-esp32
                         esp8266-oled-ssd1306
                         protocols
                         scheduler
                         logger
                         sockets
                         dis
                         wifi
                         sensors
                       PRIV_REQUIRES
                         cxx
)
