idf_component_register(SRCS
                         "src/wifi.cpp"
                       INCLUDE_DIRS
                         "include"
                       REQUIRES
                         constants
                         esp_wifi
                         display
                         driver
                         lwip
                         nvs_flash
                         esp_event
                         esp_netif
)
